# Practical-C-Game-Programming-with-Data-Structures-and-Algorithms

./: .gitignore  CMakeLists.txt  README.md
Knight/: CMakeLists.txt  Knight.sln
Knight/BonusGameWorld01/: BillboardComponent.cpp  BillboardComponent.h  BonusGameWorld01.cpp  BonusGameWorld01.h  BonusGameWorld01.vcxproj  CMakeLists.txt  DepthRenderPass.cpp  DepthRenderPass.h  Entities.h  FSM.h  FollowUpCamera.cpp  FollowUpCamera.h  MagcAttackEffect.cpp  MagicAttackEffect.h  ParticleComponent.cpp  ParticleComponent.h  PlayerEntity.cpp  PlayerFSM.cpp  PlayerFSM.h  PropEntity.cpp  QuadTreeTerrainComponent.cpp  QuadTreeTerrainComponent.h  ShadowMapRenderPass.cpp  ShadowMapRenderPass.h  ShadowSceneLight.cpp  ShadowSceneLight.h  SkyBoxComponent.cpp  SkyboxComponent.h  TerrainEntity.cpp
Knight/Demo1/: Demo1.cpp  Demo1.vcxproj
Knight/Demo1.1/: Demo1.1.vcxproj  Demo1.1.vcxproj.filters  Demo1.cpp  Demo1.h
Knight/Demo10/: Demo10.cpp  Demo10.h  Demo10.vcxproj  Demo10.vcxproj.filters  NeuralNetwork.cpp  NeuralNetwork.h  TurretController.cpp  TurretController.h
Knight/Demo2a/: Demo2a.cpp  Demo2a.h  Demo2a.vcxproj  Demo2a.vcxproj.filters  Entities.cpp  Entities.h
Knight/Demo2b/: Demo2b.cpp  Demo2b.h  Demo2b.vcxproj  Demo2b.vcxproj.filters  Entities.cpp  Entities.h
Knight/Demo2c/: Demo2c.cpp  Demo2c.h  Demo2c.vcxproj  Demo2c.vcxproj.filters  Entities.cpp
Knight/Demo2d/: Demo2d.cpp  Demo2d.h  Demo2d.vcxproj  Demo2d.vcxproj.filters  Entities.cpp  Entities.h
Knight/Demo2e/: Demo2e.cpp  Demo2e.h  Demo2e.vcxproj  Demo2e.vcxproj.filters  Demo2eUI.cpp  Demo2eUI.h  UIPopup.cpp  UIPopup.h
Knight/Demo2f/: AliveEntity.cpp  Demo2f.cpp  Demo2f.h  Demo2f.vcxproj  Demo2f.vcxproj.filters  EnemyEntity.cpp  Entities.h  OtherEntities.cpp  PlayerEntity.cpp
Knight/Demo3a/: Demo3a.cpp  Demo3a.h  Demo3a.vcxproj  Demo3a.vcxproj.filters  Random.h  Selector.h
Knight/Demo3b/: Demo3b.cpp  Demo3b.h  Demo3b.vcxproj  Demo3b.vcxproj.filters  Selector.h
Knight/Demo3c/: Demo3c.cpp  Demo3c.h  Demo3c.vcxproj  Demo3c.vcxproj.filters  Random.h  Shuffler.h
Knight/Demo3d/: Demo3d.cpp  Demo3d.h  Demo3d.vcxproj  Demo3d.vcxproj.filters  (+3 more)
(+270 files in other folders)
