add_subdirectory(Knight)

add_subdirectory(Demo1)
add_subdirectory(Demo2a)
add_subdirectory(Demo2b)
add_subdirectory(Demo2c)
add_subdirectory(Demo2d)
add_subdirectory(Demo2e)
add_subdirectory(Demo2f)
add_subdirectory(Demo3a)
add_subdirectory(Demo3b)
add_subdirectory(Demo3c)
add_subdirectory(Demo3d)
add_subdirectory(Demo3e)
add_subdirectory(Demo3f)
add_subdirectory(Demo4iso)
add_subdirectory(Demo4ss)
add_subdirectory(Demo4texops)
add_subdirectory(Demo53PV)
add_subdirectory(Demo5FPC)
add_subdirectory(Demo5MultiCams)
add_subdirectory(Demo5Ortho)
add_subdirectory(Demo5RTSCam)
add_subdirectory(Demo5TrkCam)
add_subdirectory(Demo6Light)
add_subdirectory(Demo6LightShader)
add_subdirectory(Demo6NormalMap)
add_subdirectory(Demo7Billboard)
add_subdirectory(Demo7Deferred)
add_subdirectory(Demo7HMap)
add_subdirectory(Demo7Particles)
add_subdirectory(Demo7PCFShadow)
add_subdirectory(Demo7QuadTreeTerrain)
add_subdirectory(Demo7SkyBox)
add_subdirectory(Demo8a)
add_subdirectory(Demo8b)
add_subdirectory(Demo8c)
add_subdirectory(Demo9a)
add_subdirectory(Demo9b)
add_subdirectory(Demo9c)
add_subdirectory(Demo10)
add_subdirectory(BonusGameWorld01)
